fixed spacing in non monkey-bg pages

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -17,6 +17,10 @@
   .navbar-app {
     margin: 20%
   }
+
+  .main {
+    padding: 10%;
+  }
 }
 
 @media screen and (max-width: 992px) {
